# src/main/java/com/ph/backoffice/configuration/PharmacyDomainConfig.java
@@ -3,6 +3,7 @@ package com.ph.backoffice.configuration;
 import com.ph.backoffice.domain.certifications.port.in.feat.CreateCertificationRequest;
 import com.ph.backoffice.domain.certifications.port.in.feat.CreatePharmacy;
 import com.ph.backoffice.domain.certifications.port.in.feat.DeletePharmacy;
+import com.ph.backoffice.domain.certifications.port.in.feat.GetCertificationRequest;
 import com.ph.backoffice.domain.certifications.port.in.feat.GetPharmacy;
 import com.ph.backoffice.domain.certifications.port.in.feat.ListCurrentUserPharmacies;
 import com.ph.backoffice.domain.certifications.port.in.feat.ListPharmacies;
@@ -11,6 +12,7 @@ import com.ph.backoffice.domain.certifications.port.in.feat.VerifyPharmacy;
 import com.ph.backoffice.domain.certifications.port.in.impl.CreateCertificationRequestImpl;
 import com.ph.backoffice.domain.certifications.port.in.impl.CreatePharmacyImpl;
 import com.ph.backoffice.domain.certifications.port.in.impl.DeletePharmacyImpl;
+import com.ph.backoffice.domain.certifications.port.in.impl.GetCertificationRequestImpl;
 import com.ph.backoffice.domain.certifications.port.in.impl.GetPharmacyImpl;
 import com.ph.backoffice.domain.certifications.port.in.impl.ListCurrentUserPharmaciesImpl;
 import com.ph.backoffice.domain.certifications.port.in.impl.ListPharmaciesImpl;
@@ -28,7 +30,8 @@ import org.springframework.context.annotation.Configuration;
 public class PharmacyDomainConfig {
 
   @Bean
-  public CertificationDomainService pharmacyDomainService(PharmacyRepository pharmacyRepository) {
+  public CertificationDomainService certificationDomainService(
+      PharmacyRepository pharmacyRepository) {
     return new CertificationDomainService(pharmacyRepository);
   }
 
@@ -36,8 +39,8 @@ public class PharmacyDomainConfig {
   public CreatePharmacy createPharmacy(
       PharmacyRepository pharmacyRepository,
       OwnerRepository ownerRepository,
-      CertificationDomainService pharmacyDomainService) {
-    return new CreatePharmacyImpl(pharmacyRepository, ownerRepository, pharmacyDomainService);
+      CertificationDomainService certificationDomainService) {
+    return new CreatePharmacyImpl(pharmacyRepository, ownerRepository, certificationDomainService);
   }
 
   @Bean
@@ -78,16 +81,18 @@ public class PharmacyDomainConfig {
   }
 
   @Bean
-  public CertificationDomainService certificationDomainService(
-      PharmacyRepository pharmacyRepository) {
-    return new CertificationDomainService(pharmacyRepository);
-  }
-
-  @Bean
   public CreateCertificationRequest createCertificationRequest(
       CertificationRequestRepository certificationRequestRepository,
       CertificationDomainService certificationDomainService) {
     return new CreateCertificationRequestImpl(
+        certificationRequestRepository, certificationDomainService);
+  }
+
+  @Bean
+  public GetCertificationRequest getCertificationRequest(
+      CertificationRequestRepository certificationRequestRepository,
+      CertificationDomainService certificationDomainService) {
+    return new GetCertificationRequestImpl(
         certificationRequestRepository, certificationDomainService);
   }
 }
