# src/main/java/com/ph/backoffice/domain/certifications/port/in/feat/CreateCertificationRequest.java
@@ -1,9 +1,10 @@
 package com.ph.backoffice.domain.certifications.port.in.feat;
 
 import com.ph.backoffice.domain.certifications.CertificationRequest;
+import com.ph.backoffice.domain.certifications.model.CertificationRequestCreateData;
 import java.util.UUID;
 
 public interface CreateCertificationRequest {
   CertificationRequest createCertificationRequest(
-      UUID pharmacyId, String documentUrl, String notes);
+      UUID pharmacyId, CertificationRequestCreateData data);
 }
